--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<body>
 		<h2>Links para os documentos criados no passo 4</h2>
 		<p></p>
-		<a href="html_documents.html">Este é o link para o do documents</a>
+		<a href="documents/index.html">Este é o link para o do documents</a>
 		<p></p>
-		<a href="html_headings.html">Este é o link para o do headings</a>
+		<a href="headings/index.html">Este é o link para o do headings</a>
 		<p></p>
-		<a href="html_images.html">Este é o link para o do images</a>
+		<a href="images/index.html">Este é o link para o do images</a>
 		<p></p>
-		<a href="html_links.html">Este é o link para o do links</a>
+		<a href="links/index.html">Este é o link para o do links</a>
 		<p></p>
-		<a href="html_paragraphs.html">Este é o link para o do paragraphs</a>
+		<a href="paragraphs/index.html">Este é o link para o do paragraphs</a>
 	</body>
 </html>
 
